--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ decorator==4.4.2
 future==0.18.2
 greenlet==1.1.2
 gym==0.17.3
+gym-climate==0.0.1
+gym-conservation==0.0.6
 gym-fishing==0.1.0
 importlib-metadata==4.8.2
 importlib-resources==5.4.0
@@ -25,6 +27,7 @@ Mako==1.1.6
 MarkupSafe==2.0.1
 matplotlib==3.3.2
 numpy==1.19.2
+opencv-python==4.5.5.62
 optuna==2.10.0
 packaging==21.3
 pandas==1.1.3
@@ -42,12 +45,14 @@ Pygments==2.7.1
 pyparsing==2.4.7
 pyperclip==1.8.2
 python-dateutil==2.8.1
+python-dotenv==0.19.2
 pytz==2020.1
 PyYAML==6.0
+sb3-contrib==1.4.0
 scipy==1.5.2
 six==1.15.0
 SQLAlchemy==1.4.27
-stable-baselines3==1.3.0
+stable-baselines3==1.4.0
 stevedore==3.5.0
 tenacity==8.0.1
 torch==1.10.0
